# service-template

./: README.md  pyproject.toml
serivce/: main.py
serivce/api/: router.py
serivce/api/edpoints/: system.py
serivce/core/: logger.py  metrics.py
template_service/: main.py
template_service/api/: router.py
template_service/core/: config.py
